# RatS

./: .codeclimate.yml  .coveragerc  .coveralls.yml  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  .travis.yml  Dockerfile  ISSUE_TEMPLATE.md  InstallGeckodriver.sh  InstallSelenium.sh  README.md  credentials.cfg.orig  get_imdb_ratings_to_movielense.py  get_trakt_ratings.py  get_trakt_ratings_to_imdb.py  get_trakt_ratings_to_movielense.py  pyproject.toml  pytest.ini  requirements.txt  search for a movie titale and actor information  setup.py  transfer_imdb_ratings_to_movielens.py  transfer_imdb_ratings_to_movielense.py  transfer_imdb_ratings_to_trakt.py  transfer_movielens_ratings_to_imdb.py  transfer_movielens_ratings_to_trakt.py  transfer_ratings.py  transfer_trakt_ratings_to_imdb.py  transfer_trakt_ratings_to_movielens.py  transfer_trakt_ratings_to_movielense.py  travis_requirements.txt
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  Bug_report.md  FEATURE_REQUEST.md
.github/workflows/: CI.yml  codeql-analysis.yml  dependabot.yml  docker.yml  dockerimage.yml
RatS/: credentials.cfg.orig  get_trakt_ratings.py  sites.cfg
RatS.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
RatS/allocine/: allocine_ratings_inserter.py  allocine_ratings_parser.py  allocine_site.py
RatS/base/: base_exceptions.py  base_ratings_downloader.py  base_ratings_inserter.py  base_ratings_parser.py  base_ratings_uploader.py  base_site.py  captcha_present_exception.py  csv_download_exception.py  login_failed_exception.py  movie_entity.py  no_movies_for_insertion.py  no_valid_credentials_exception.py  rats_exception.py  site_not_reachable_exception.py
RatS/criticker/: criticker_inserter.py  criticker_parser.py  criticker_ratings_inserter.py  criticker_ratings_parser.py  (+1 more)
data/: file_handler.py  movie.py  movie_source.py
parsers/: base_parser.py  trakt_parser.py
sites/: movielense.py  trakt.py
(+273 files in other folders)
