[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rats"
version = "1.0"
description = "Movie Ratings Synchronization with Python"
authors = ["Sebastian Schreck <sebastian.schreck@stegschreck.de>"]
license = "AGPL-3.0-only"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "4.12.3"
bs4 = "0.0.2"
configparser = "7.0.0"
progressbar2 = "4.4.2"
selenium = "4.21.0"
xvfbwrapper = "0.2.9"
requests = "^2.31.0"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
black = "24.4.2"
pydantic = "2.7.1"
pytest = "8.2.0"
pytest-cov = "5.0.0"
flake8 = "7.0.0"
pre-commit = "3.7.0"
pylint = "3.2.0"
mypy = "1.10.0"
types-beautifulsoup4 = "4.12.0.20240504"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    node_nodules
  | \.git
  | \.venv
  | \venv
  | \.mypy_cache
  | build
  | dist
)/
'''

[tool.mypy]
exclude = ['venv']